// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropDownInput /> should render the correct markup 1`] = `
<span
  className="eadAIH"
  role="option"
  tabIndex="-1"
  value="rock"
>
  Rock & Roll
</span>
`;

exports[`<DropDownInput /> should render the correct markup when additional props are passed 1`] = `
<span
  className="eadAIH"
  data-index={0}
  role="option"
  tabIndex="-1"
  value="rock"
>
  Rock & Roll
</span>
`;

exports[`<DropDownInput /> should render the correct markup when the className prop is valid 1`] = `
<span
  className="input--drop-down eadAIH"
  role="option"
  tabIndex="-1"
  value="rock"
>
  Rock & Roll
</span>
`;

exports[`<DropDownInput /> should render the correct markup when the isSelected prop equals true 1`] = `
<span
  className="dropdown__selected eadAIH"
  role="option"
  tabIndex="-1"
  value="rock"
>
  Rock & Roll
</span>
`;
